--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="Permissions-Policy" content="camera=()">
-    <meta http-equiv="Permissions-Policy" content="accelerometer=(), gyroscope=(), magnetometer=(), device-motion=()">
+    <meta http-equiv="Permissions-Policy" content="camera=(), accelerometer=(), gyroscope=(), magnetometer=(), device-motion=()">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
     <script src="https://unpkg.com/ml5@0.6.0/dist/ml5.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-
   </head>
   <body>
     <script src="sketch.js"></script>
