--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <script src="p5.js"></script>
+    <script src="m15.js"></script>
   </body>
 </html>
