--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <script src="sketch.js"></script>
     <script src="p5.js"></script>
-    <script src="m15.js"></script>
+    <script src="ml5.js"></script>
   </body>
 </html>
